fixed vertical align in table

--- a/src/assets/_fonts.scss
+++ b/src/assets/_fonts.scss
@@ -44,6 +44,7 @@
   --vt-table-td-font-size: var(--font-size-sm);
   --vt-table-td-line-height: 20px;
   --vt-table-td-letter-spacing: 0%;
+  --vt-table-td-vertical-align: middle;
 
   // Drop down
   --vt-dropdown-font-family: var(--font-secondary);
